# Dodge-the-Magma

./: .gitignore  Dodge the Magma desktop for pygbag.py  Dodge the Magma with Shield!.py  Dodge the magma desktop Windows.py  README.md  pyproject.toml  save.json
cpp_version/: CMakeLists.txt  Dodge the magma desktop Windows cpp.cpp  dodge_the_magma_desktop_cpp.cpp
py_version/: dodge_the_magma_desktop_py.py
python/: dodge_the_magma_desktop_py.py  pyproject.toml
python/multi_file/: console.py  constants.py  display.py  game_logic.py  game_state.py  helpers.py  main.py  renderer.py  save_manager.py  ui.py
web/: Dodge the Magma Tap Controls for pygbag.py  main.py
web ver py going to rm/: ui_layout.py
